# identity-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: bb9dcdcb815e_init.py
app/: main.py
app/core/: celery_app.py  cors.py  logging.py  schema.py  sentry.py  settings.py
app/core/database/: auth.py  connection.py  dependencies.py
app/core/routes/: routes_v1.py
app/modules/auth/: dependencies.py  service.py
app/modules/auth/api/v1/: router.py  schemas.py
app/modules/shared/: dependencies.py  email.py  enums.py  exceptions.py  models.py  permissions.py  security.py  utils.py
app/modules/shared/exceptions/: __init__.py  constants.py  handlers.py
app/modules/users/: dependencies.py  models.py  service.py
app/modules/users/api/v1/: router.py  schemas.py
app/modules/users/tasks/: cleanup.py  email_verification.py
